force-app/main/default/objects/Equal_Access_Info__c/Equal_Access_Info__c.object-meta.xml
<CustomObject>
    <label>Equal Access Info</label>
    <nameField>
        <label>Equal Access Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equal Access Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>