force-app/main/default/objects/Equal_Access_Info__c/fields/Carrier_Ref_Num__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Ref_Num__c</fullName>
    <label>Carrier Reference Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>