force-app/main/default/objects/Equal_Access_Info__c/fields/Customer_Notify_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Notify_Date__c</fullName>
    <label>Customer Notify Date</label>
    <type>Date</type>
</CustomField>