force-app/main/default/objects/Equal_Access_Info__c/fields/Effective_Time__c.field-meta.xml
<CustomField>
    <fullName>Effective_Time__c</fullName>
    <label>Effective Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>