force-app/main/default/objects/Equal_Access_Info__c/fields/Library_Id__c.field-meta.xml
<CustomField>
    <fullName>Library_Id__c</fullName>
    <label>Library Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>