force-app/main/default/objects/Equal_Access_Info__c/fields/Preffered_CCode__c.field-meta.xml
<CustomField>
    <fullName>Preffered_CCode__c</fullName>
    <label>Preffered Carrier Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>