force-app/main/default/objects/Equal_Access_Info__c/fields/Preffered_Description__c.field-meta.xml
<CustomField>
    <fullName>Preffered_Description__c</fullName>
    <label>Preffered Carrier Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>