force-app/main/default/objects/Equal_Access_Info__c/fields/RRN__c.field-meta.xml
<CustomField>
    <fullName>RRN__c</fullName>
    <label>RRN</label>
    <length>25</length>
    <type>Text</type>
</CustomField>