force-app/main/default/objects/Equal_Access_Info__c/fields/SAC__c.field-meta.xml
<CustomField>
    <fullName>SAC__c</fullName>
    <label>SAC</label>
    <length>25</length>
    <type>Text</type>
</CustomField>