force-app/main/default/objects/Equal_Access_Info__c/fields/Seq__c.field-meta.xml
<CustomField>
    <fullName>Seq__c</fullName>
    <label>Seq #</label>
    <length>1</length>
    <type>Text</type>
</CustomField>