force-app/main/default/objects/Equal_Access_Info__c/fields/Service_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Service_Order_Number__c</fullName>
    <label>Service Order Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>