force-app/main/default/objects/Equal_Access_Info__c/fields/Source_Descrition__c.field-meta.xml
<CustomField>
    <fullName>Source_Descrition__c</fullName>
    <label>Source Code Descrition</label>
    <length>30</length>
    <type>Text</type>
</CustomField>